[metadata]
name = fuzz
version = 0.1.1
author = sundapeng.sdp
description = The project contains a variety of fuzz tools.
classifiers =
    Programming Language :: Python :: 3
[option]
install_requires =
    chardet==5.1.0
    pycurl==7.45.2
    pyparsing==3.1.0a1
    six==1.16.0
    wcwidth==0.2.6
    wfuzz==3.1.0
[options.entry_points]
console_scripts =
    fuzz = fuzz_entry:script_entry
    wfuzz = wfuzz.wfuzz:main

fuzz_types =
    wfuzz = fuzz_entry:WfuzzFactory
